k8s/notification.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notification
  labels:
    name:  notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  notification
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  notification
    spec:
      containers:
      - image:  notification
        name:  notification-server
        resources:
          requests:
            cpu: "150m"
            memory: "100M"
          limits:
            cpu: "250m"
            memory: "250M"
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 4000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/readyz
            port: 4000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  4000
          name:  http
