k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  router-deployment
  labels:
    name:  router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: router-server
  template:
    metadata:
      labels:
        name:  router-server
    spec:
      containers:
      - image:  router
        name:  router-server
        resources:
          requests:
            cpu: "20m"
            memory: "250Mi"
          limits:
            cpu: "50m"
            memory: "500Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3001
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/readyz
            port: 3001
          initialDelaySeconds: 30
          timeoutSeconds: 10      
        ports:
        - containerPort:  3001
          name:  router
