k8s/router-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  router-service
spec:
  selector:
    name:  router-server
  type:  ClusterIP  
  ports:
  - name:  http
    port:  80
    targetPort:  3001
