k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$http_host"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"

spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/sandbox
        pathType: Prefix
        backend:
          service:
            name: main-sandbox-service
            port:
              number: 80
      - path: /api/agent
        pathType: Prefix
        backend:
          service:
            name: main-sandbox-service
            port:
              number: 80
      - path: /api/agent-ws
        pathType: Prefix
        backend:
          service:
            name: main-sandbox-service
            port:
              number: 80
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /api/ai
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 80


    # router
  - host: "*.preview.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: router-service
              port:
                number: 80
                
  - host: "*.agent.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: router-service
              port:
                number: 80
